# ttlidar_linux_sdk

./: CMakeLists.txt  READ_ME.md
app/: demo_main.cpp
sdk/src/: ttlidar_driver.cpp
